--- a/biblio.bib
+++ b/biblio.bib
@@ -1,178 +1,183 @@
-@article{Boutilier2006,
-	author = "Boutilier, C. and Patrascu, R. and Poupart, P. and Schuurmans, D.",
-	journal = "Artifical Intelligence",
-	keywords = "COGS",
-	number = "8--9",
-	pages = "686--713",
-	title = "{Constraint-based Optimization and Utility Elicitation using the Minimax Decision Criterion}",
-	volume = 170,
-	year = "2006"
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
+
+
+@Article{Boutilier2006,
+  Title                    = {{Constraint-based Optimization and Utility Elicitation using the Minimax Decision Criterion}},
+  Author                   = {Boutilier, C. and Patrascu, R. and Poupart, P. and Schuurmans, D.},
+  Journal                  = {Artifical Intelligence},
+  Year                     = {2006},
+  Number                   = {8--9},
+  Pages                    = {686--713},
+  Volume                   = {170},
+
+  Keywords                 = {COGS}
 }
 
-@PhDThesis{Braziunas2011,
-  author = 	 {Darius Braziunas},
-  title = 	 {Decision-theoretic elicitation of generalized additive utilities},
-  school =       {University of Toronto},
-  year = 	 {2011}
+@PhdThesis{Braziunas2011,
+  Title                    = {Decision-theoretic elicitation of generalized additive utilities},
+  Author                   = {Darius Braziunas},
+  School                   = {University of Toronto},
+  Year                     = {2011}
 }
 
-@inproceedings{Cailloux2014,
-	author    = {Olivier Cailloux and
-	Ulle Endriss},
-	title     = {Eliciting a Suitable Voting Rule via Examples},
-	booktitle = {{ECAI} 2014 - 21st European Conference on Artificial Intelligence,
-	18-22 August 2014, Prague, Czech Republic - Including Prestigious
-	Applications of Intelligent Systems {(PAIS} 2014)},
-	pages     = {183--188},
-	year      = {2014},
-	doi       = {10.3233/978-1-61499-419-0-183},
-	timestamp = {Wed, 24 May 2017 08:27:19 +0200}
+@InProceedings{Cailloux2014,
+  Title                    = {Eliciting a Suitable Voting Rule via Examples},
+  Author                   = {Olivier Cailloux and Ulle Endriss},
+  Booktitle                = {{ECAI} 2014 - 21st European Conference on Artificial Intelligence, 18-22 August 2014, Prague, Czech Republic - Including Prestigious Applications of Intelligent Systems {(PAIS} 2014)},
+  Year                     = {2014},
+  Pages                    = {183--188},
+
+  Doi                      = {10.3233/978-1-61499-419-0-183},
+  Timestamp                = {Wed, 24 May 2017 08:27:19 +0200}
 }
 
-@article{Kalech2011,
-	author    = {Meir Kalech and
-	Sarit Kraus and
-	Gal A. Kaminka and
-	Claudia V. Goldman},
-	title     = {Practical voting rules with partial information},
-	journal   = {Autonomous Agents and Multi-Agent Systems},
-	volume    = {22},
-	number    = {1},
-	pages     = {151--182},
-	year      = {2011}
+@Article{Kalech2011,
+  Title                    = {Practical voting rules with partial information},
+  Author                   = {Meir Kalech and Sarit Kraus and Gal A. Kaminka and Claudia V. Goldman},
+  Journal                  = {Autonomous Agents and Multi-Agent Systems},
+  Year                     = {2011},
+  Number                   = {1},
+  Pages                    = {151--182},
+  Volume                   = {22}
 }
 
-@inproceedings{Konczak05,
-	Author = {Kathrin Konczak and Jerome Lang},
-	Booktitle = {IJCAI Workshop on Advances in Preference Handling},
-	Pages = {124--129},
-	Title = {Voting Procedures with Incomplete Preferences},
-	keywords = {voting, social choice, preferences},
-	Year = {2005}
+@InProceedings{Konczak05,
+  Title                    = {Voting Procedures with Incomplete Preferences},
+  Author                   = {Kathrin Konczak and Jerome Lang},
+  Booktitle                = {IJCAI Workshop on Advances in Preference Handling},
+  Year                     = {2005},
+  Pages                    = {124--129},
+
+  Keywords                 = {voting, social choice, preferences}
 }
 
-@Article{Naamani-Dery2015,
-author="Naamani-Dery, Lihi
-and Golan, Inon
-and Kalech, Meir
-and Rokach, Lior",
-title="Preference Elicitation for Group Decisions Using the {B}orda Voting Rule",
-journal="Group Decision and Negotiation",
-year="2015",
-month="Nov",
-day="01",
-volume="24",
-number="6",
-pages="1015--1033"
-}
+@Book{Kouvelis1997,
+  Title                    = {{Robust Discrete Optimization and Its Applications}},
+  Author                   = {Kouvelis, P. and Yu, G.},
+  Publisher                = {Kluwer},
+  Year                     = {1997},
 
-@article{Salo2001,
-	Author = {A. Salo and R. P. H{\"a}m{\"a}l{\"a}inen},
-	Journal = {IEEE Trans. on Systems, Man and Cybernetics},
-	Number = 6,
-	Pages = {533--545},
-	Title = {Preference Ratios in Multiattribute Evaluation {(PRIME)}--Elicitation and Decision Procedures under Incomplete Information},
-	Volume = 31,
-	Year = 2001
-}
-	
-@book{Kouvelis1997,
-	address = "Dordrecht",
-	author = "Kouvelis, P. and Yu, G.",
-	publisher = "Kluwer",
-	title = "{Robust Discrete Optimization and Its Applications}",
-	year = "1997"
-}
-
-@article{Llamazares2013,
-	author    = {Bonifacio Llamazares and
-	Teresa Pe{\~{n}}a},
-	title     = {Aggregating preferences rankings with variable weights},
-	journal   = {European Journal of Operational Research},
-	volume    = {230},
-	number    = {2},
-	pages     = {348--355},
-	year      = {2013},
-	url       = {https://doi.org/10.1016/j.ejor.2013.04.013},
-	doi       = {10.1016/j.ejor.2013.04.013},
-	timestamp = {Thu, 15 Jun 2017 21:31:49 +0200},
-	biburl    = {http://dblp.org/rec/bib/journals/eor/LlamazaresP13},
-	bibsource = {dblp computer science bibliography, http://dblp.org}
+  Address                  = {Dordrecht}
 }
 
 @Article{Llamazares2016,
-author="Llamazares, Bonifacio",
-title="Ranking Candidates Through Convex Sequences of Variable Weights",
-journal="Group Decision and Negotiation",
-year="2016",
-month="May",
-day="01",
-volume="25",
-number="3",
-pages="567--584"
+  Title                    = {Ranking Candidates Through Convex Sequences of Variable Weights},
+  Author                   = {Llamazares, Bonifacio},
+  Journal                  = {Group Decision and Negotiation},
+  Year                     = {2016},
+
+  Month                    = {May},
+  Number                   = {3},
+  Pages                    = {567--584},
+  Volume                   = {25},
+
+  Day                      = {01}
 }
 
+@Article{Llamazares2013,
+  Title                    = {Aggregating preferences rankings with variable weights},
+  Author                   = {Bonifacio Llamazares and Teresa Pe{\~{n}}a},
+  Journal                  = {European Journal of Operational Research},
+  Year                     = {2013},
+  Number                   = {2},
+  Pages                    = {348--355},
+  Volume                   = {230},
 
-@inproceedings{Lu2011,
-  author    = {Tyler Lu and
-               Craig Boutilier},
-  title     = {Robust Approximation and Incremental Elicitation in Voting Protocols},
-  booktitle = {Proceedings of {IJCAI} 2011},
-  pages     = {287--293},
-  year      = {2011}
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.org/rec/bib/journals/eor/LlamazaresP13},
+  Doi                      = {10.1016/j.ejor.2013.04.013},
+  Timestamp                = {Thu, 15 Jun 2017 21:31:49 +0200},
+  Url                      = {https://doi.org/10.1016/j.ejor.2013.04.013}
 }
 
-@article{Pini2009,
-	author    = {Maria Silvia Pini and
-	Francesca Rossi and
-	Kristen Brent Venable and
-	Toby Walsh},
-	title     = {Aggregating Partially Ordered Preferences},
-	journal   = {J. Log. Comput.},
-	volume    = {19},
-	number    = {3},
-	pages     = {475--502},
-	year      = {2009}
+@InProceedings{Lu2011,
+  Title                    = {Robust Approximation and Incremental Elicitation in Voting Protocols},
+  Author                   = {Tyler Lu and
+ Craig Boutilier},
+  Booktitle                = {Proceedings of {IJCAI} 2011},
+  Year                     = {2011},
+  Pages                    = {287--293}
 }
 
-@book{Savage1954,
-	address = "New York",
-	author = "Savage, L. J.",
-	publisher = "Wiley",
-	title = "{The Foundations of Statistics}",
-	year = "1954"
+@Article{Naamani-Dery2015,
+  Title                    = {Preference Elicitation for Group Decisions Using the {B}orda Voting Rule},
+  Author                   = {Naamani-Dery, Lihi
+and Golan, Inon
+and Kalech, Meir
+and Rokach, Lior},
+  Journal                  = {Group Decision and Negotiation},
+  Year                     = {2015},
+
+  Month                    = {Nov},
+  Number                   = {6},
+  Pages                    = {1015--1033},
+  Volume                   = {24},
+
+  Day                      = {01}
 }
 
-@article{Stein1994,
-title = "A stochastic dominance analysis of ranked voting systems with scoring",
-journal = "European Journal of Operational Research",
-volume = "74",
-number = "1",
-pages = "78 - 85",
-year = "1994",
-issn = "0377-2217",
-doi = "https://doi.org/10.1016/0377-2217(94)90205-4",
-url = "http://www.sciencedirect.com/science/article/pii/0377221794902054",
-author = "William E. Stein and Philip J. Mizzi and Roger C. Pfaffenberger",
-keywords = "Decision-making, Stochastic dominance, Preference analysis, Sports"
+@Article{Pini2009,
+  Title                    = {Aggregating Partially Ordered Preferences},
+  Author                   = {Maria Silvia Pini and Francesca Rossi and Kristen Brent Venable and Toby Walsh},
+  Journal                  = {J. Log. Comput.},
+  Year                     = {2009},
+  Number                   = {3},
+  Pages                    = {475--502},
+  Volume                   = {19}
 }
 
-@inproceedings{Viappiani2018,
-  author    = {Paolo Viappiani},
-  title     = {Positional Scoring Rules with Uncertain Weights},
-  booktitle = {Scalable Uncertainty Management - 12th International Conference, {SUM}
-               2018, Milan, Italy, October 3-5, 2018, Proceedings},
-  pages     = {306--320},
-  year      = {2018}
+@Article{Salo2001,
+  Title                    = {Preference Ratios in Multiattribute Evaluation {(PRIME)}--Elicitation and Decision Procedures under Incomplete Information},
+  Author                   = {A. Salo and R. P. H{\"a}m{\"a}l{\"a}inen},
+  Journal                  = {IEEE Trans. on Systems, Man and Cybernetics},
+  Year                     = {2001},
+  Number                   = {6},
+  Pages                    = {533--545},
+  Volume                   = {31}
 }
 
-@inproceedings{Xia2008,
-  author    = {Lirong Xia and
-               Vincent Conitzer},
-  title     = {Determining Possible and Necessary Winners under Common Voting Rules
-               Given Partial Orders},
-  booktitle = {Proceedings of the Twenty-Third {AAAI} Conference on Artificial Intelligence,
-               {AAAI} 2008, Chicago, Illinois, USA, July 13-17, 2008},
-  pages     = {196--201},
-  year      = {2008}
+@Book{Savage1954,
+  Title                    = {{The Foundations of Statistics}},
+  Author                   = {Savage, L. J.},
+  Publisher                = {Wiley},
+  Year                     = {1954},
+
+  Address                  = {New York}
 }
+
+@Article{Stein1994,
+  Title                    = {A stochastic dominance analysis of ranked voting systems with scoring},
+  Author                   = {William E. Stein and Philip J. Mizzi and Roger C. Pfaffenberger},
+  Journal                  = {European Journal of Operational Research},
+  Year                     = {1994},
+  Number                   = {1},
+  Pages                    = {78 - 85},
+  Volume                   = {74},
+
+  Doi                      = {https://doi.org/10.1016/0377-2217(94)90205-4},
+  ISSN                     = {0377-2217},
+  Keywords                 = {Decision-making, Stochastic dominance, Preference analysis, Sports},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/0377221794902054}
+}
+
+@InProceedings{Viappiani2018,
+  Title                    = {Positional Scoring Rules with Uncertain Weights},
+  Author                   = {Paolo Viappiani},
+  Booktitle                = {Scalable Uncertainty Management - 12th International Conference, {SUM}
+ 2018, Milan, Italy, October 3-5, 2018, Proceedings},
+  Year                     = {2018},
+  Pages                    = {306--320}
+}
+
+@InProceedings{Xia2008,
+  Title                    = {Determining Possible and Necessary Winners under Common Voting Rules
+ Given Partial Orders},
+  Author                   = {Lirong Xia and
+ Vincent Conitzer},
+  Booktitle                = {Proceedings of the Twenty-Third {AAAI} Conference on Artificial Intelligence,
+ {AAAI} 2008, Chicago, Illinois, USA, July 13-17, 2008},
+  Year                     = {2008},
+  Pages                    = {196--201}
+}
+
