--- a/minimax.tex
+++ b/minimax.tex
@@ -387,7 +387,7 @@ This idea can be exploited further by adopting a minimax-search tree \citep{Braz
 \label{sec:elicit}
 We propose an incremental elicitation method based on minimax regret.
 At each step, the system may ask a question either to one of the agents about her preferences or to the chair about the voting rule. 
-The goal is to acquire relevant information to reduce minimax regret as quickly as possible.
+The goal is to obtain relevant information to reduce minimax regret as quickly as possible.
 As termination condition of elicitation, we can check whether minimax regret is lower than a threshold; if we wish optimality, we can perform elicitation until minimax regret drops to zero.
 
 The remainder of this section is structured as follows.
@@ -403,7 +403,7 @@ If agent $j$ answers a comparison query stating that alternative $a$ is preferre
 
 A bit more discussion is needed about {\em questions asked to the chair}.
 Such questions aim at refining our knowledge about the scoring rule; a response gives us a constraint on the weight vector $\w$.
-In particular, we want to acquire constraints of the type:
+In particular, we want to obtain constraints of the type
 \begin{align}
 	w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})
 \end{align}
@@ -463,20 +463,20 @@ Then, the Pessimistic strategy considers question $q_1$ more suitable than $q_2$
 \end{align}
 This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
 We use this operator that is similar to a $\max$ operator because \citet{Cailloux2014} reported that pessimistic aggregation works much better than optimistic aggregation, although our experiments in this context suggested a weak impact of that choice on the performance of the strategy.
-However, to avoid the absorption property of max, we adopt a criterion closer to $\leximax$ as an aggregator: if the maximal MMR of two questions are (nearly) equal, then it considers the other MMR values, that are the one associated to the opposite answer, preferring the question with the lowest value.
-(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the (penalized) minimal MMR values, with a predominant weight to the maximal one.)
+However, to avoid the absorption property of max, we adopt a criterion closer to $\leximax$ as an aggregator: if the maximal MMR of two questions are (nearly) equal, then it considers the penalized minimal MMR values, preferring the question with the lowest value.
+(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight to the maximal one.)
 
 The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of $m^2 n + m$ candidate questions, the same as those considered by the Random strategy.
 After having selected the candidate questions, we apply the same operator as for the Pessimistic strategy: we evaluate, for each of the possible questions, the minimax regret for the two possible answers and we choose the best according to (quasi-)$\leximax$.
-We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) more efficient. We expect that Extended pessimistic will be applicable only to very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$.
+We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$.
 
-The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair, and compare the performance of asking questions to the chair first or to the agents first. It is parameterized by $p$, a value indicating the number of questions that must be asked to the chair.
-The \strat{Two phases - ca} variant first asks $p$ questions to the chair, then $k-p$ questions to the agents, using in both cases Pessimistic to select the specific questions; whereas the \strat{Two phases - ac} variant starts with $k - p$ questions to the agents, then questions the chair. 
+The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair, and compare the performance of asking questions to the chair first or to the agents first. It is parameterized by $q_c$, a value indicating the number of questions that must be asked to the chair.
+The \strat{Two phases - ca} variant first asks $q_c$ questions to the chair, then $k - q_c$ questions to the agents, using in both cases Pessimistic to select the specific questions; whereas the \strat{Two phases - ac} variant starts with $k - q_c$ questions to the agents, then questions the chair. 
 %Note that when asking first only questions to the chair, if the obtained knowledge approximates well the scoring vector, then in the second part of the elicitation we fall into the more classical setting of incompleteness of preferences assuming a known voting rule. 
 %And vice-versa when asking first questions to the agents, the second part of the elicitation is similar to the setting of incompletely specified scoring rule. 
 %This strategy also permits to simulate the current state of the art when considering incomplete preferences. By asking enough questions to the chair we can reduce our problem into a well studied one of incompleteness of preferences knowing the voting rule. Similarly, if we invert to whom ask questions first, we fall instead in an already studied case of uncertainty of the voting rule with a known complete profile. 
 
-Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternative of each agent. It asks $m-1$ questions to each agent in turn. 
+Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternative of each agent. It asks $m - 1$ questions to each agent in turn. 
 Given an agent to query $j$, it asks about an alternative currently undominated in $\ppref_j$ and any alternative that it has not yet asked about for that agent, or equivalently, any alternative that is currently incomparable to this alternative. This approach guarantees that the top alternative in the ranking of $j$ will be known after having asked $j$ exactly $m-1$ questions.
 After having asked $n (m-1)$ questions to the agents, it questions the chair only, using the same approach as the Pessimistic strategy.
 This strategy can be expected to perform well when the chair assigns an important weight to the first rank, as compared to the other ranks. It will be useful to further challenge the Pessimistic strategy, which is not specifically tailored to such a situation.
@@ -502,7 +502,7 @@ Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy 
 The preferences are generated following an impartial culture assumption: the linear order of each agent is generated independently from the other ones and all have the same probability of appearing. The weights are generated by drawing $m-1$ differences randomly with uniform distribution, normalizing them, then ordering them, in order to ensure convexity.
 The penalty parameters for the Pessimistic and Extended pessimistic strategies are set to $p(t) = 1.1$ and $p'(t) = 10^{-6}$ when $t = $“chair” and $p(t) = 1.0$ and $p'(t) = 0$ when $t = $“agent”.
 
-We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, compute the resulting $\MMR$ values along the way for various values of $k$. We repeat this whole experiment a variable number of times indicated below, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation \textit{sd}.
+We start with empty knowledge ($\pprofile = (\emptyset, \emptyset, …), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, compute the resulting $\MMR$ values along the way for various values of $k$. We repeat this whole experiment a variable number of times indicated below, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation \textit{sd}.
 
 \subsection{Relative evaluation of Pessimistic strategy}
 \begin{table}
